--- a/src/main/res/drawable/style_rounded_button_default.xml
+++ b/src/main/res/drawable/style_rounded_button_default.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <size android:height="50dp" android:width="50dp"/>
-    <solid android:color="?colorPrimary" />
+    <solid android:color="@color/whiteTransparent" />
     <corners android:radius="25dp"/>
 </shape>
