--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="light_blue_400">#FF00A2E3</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="whiteTransparent">#BBFFFFFF</color>
 </resources>
