--- a/src/main/res/layout/fragment_game_over.xml
+++ b/src/main/res/layout/fragment_game_over.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="500dp"
-    android:background="@color/light_blue_400"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
+    android:background="@color/transparent_black"
     tools:context=".Fragments.GameOverFragment">
-
 
     <TextView
         android:id="@+id/gameOver"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:fontFamily="@font/raleway_semi_bold"
         android:text="@string/game_over"
         android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="50sp" />
+        android:textColor="@color/white"
+        android:textSize="50sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.318" />
 
     <TextView
         android:id="@+id/currentScore"
@@ -26,9 +29,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/raleway_semi_bold"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="30sp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gameOver" />
 
     <TextView
         android:id="@+id/highScore"
@@ -36,8 +42,11 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/raleway_semi_bold"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="30sp"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/currentScore" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
