--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="light_blue_200">#FF00B7FF</color>
     <color name="light_blue_400">#FF00A2E3</color>
     <color name="black">#FF000000</color>
+    <color name="transparent_black">#99000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="whiteTransparent">#BBFFFFFF</color>
+    <color name="transparent_white">#DDFFFFFF</color>
 </resources>
