--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -8,33 +8,50 @@
     android:background="?colorPrimary"
     tools:context=".ui.fragment.MainMenuFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_profile"
-        android:backgroundTint="?colorPrimaryVariant"
-        android:divider="@drawable/empty_horizontal_divider"
-        android:gravity="center"
-        android:padding="12dp"
-        android:showDividers="middle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnSignIn"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/background_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:layout_width="32dp"
             android:layout_height="32dp"
+            android:layout_marginVertical="12dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="12dp"
             android:contentDescription="@string/desc_profile"
-            android:src="@drawable/ic_round_account_circle_24" />
+            android:src="@drawable/ic_round_account_circle_24"
+            app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
+            app:layout_constraintEnd_toStartOf="@+id/textView"
+            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
+            app:layout_constraintTop_toTopOf="@+id/btnSignIn" />
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/fira_sans_medium"
             android:includeFontPadding="false"
             android:text="@string/sign_in"
+            android:layout_marginEnd="12dp"
             android:textColor="?colorOnPrimary"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
+            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
+            app:layout_constraintTop_toTopOf="@+id/btnSignIn" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSingleplayer"
