--- a/app/src/main/res/layout/pause_fragment.xml
+++ b/app/src/main/res/layout/pause_fragment.xml
@@ -26,7 +26,6 @@
 
     <ImageButton
         android:id="@+id/btnResume"
-        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:background="@drawable/background_button"
@@ -37,12 +36,11 @@
         app:tint="?colorOnPrimary" />
 
     <ImageButton
-        android:id="@+id/btnExit"
-        style="@style/Widget.AppCompat.Button.Borderless"
+        android:id="@+id/btnLeave"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:background="@drawable/background_button"
-        android:contentDescription="@string/desc_menu"
+        android:contentDescription="@string/desc_leave"
         android:padding="8dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_back_24"
@@ -53,8 +51,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:constraint_referenced_ids="btnExit,btnResume"
-        app:flow_horizontalGap="8dp"
+        app:constraint_referenced_ids="btnLeave,btnResume"
+        app:flow_horizontalGap="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
