--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,16 +2,19 @@
     <!-- Base application theme. -->
     <style name="Theme.Tetris" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/grey</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/dark_grey</item>
+        <item name="colorOnPrimary">@color/white</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/grey</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/white_transparent</item>
+        <item name="colorSecondaryVariant">@color/grey_transparent</item>
+        <item name="colorOnSecondary">@color/black_transparent</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/transparent</item>
         <!-- Customize your theme here. -->
+        <item name="android:alertDialogTheme">@style/LightDialogTheme</item>
+        <item name="alertDialogTheme">@style/LightDialogTheme</item>
     </style>
 
     <style name="Theme.Tetris.Fullscreen" parent="Theme.Tetris">
