--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,7 +38,20 @@
             app:popEnterAnim="@android:anim/fade_in"
             app:popExitAnim="@android:anim/fade_out"
             app:popUpTo="@id/gameOverFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="true" >
+            <argument
+                android:name="score"
+                app:argType="integer"
+                android:defaultValue="0" />
+            <argument
+                android:name="lines"
+                app:argType="integer"
+                android:defaultValue="0" />
+            <argument
+                android:name="level"
+                app:argType="integer"
+                android:defaultValue="0" />
+        </action>
         <action
             android:id="@+id/action_gameFragment_to_mainMenuFragment"
             app:destination="@id/mainMenuFragment" />
@@ -67,5 +80,17 @@
         <action
             android:id="@+id/action_gameOverFragment_to_gameFragment"
             app:destination="@id/gameFragment" />
+        <argument
+            android:name="score"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="lines"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="level"
+            app:argType="integer"
+            android:defaultValue="0" />
     </fragment>
 </navigation>
