--- a/app/src/main/res/layout/game_over_fragment.xml
+++ b/app/src/main/res/layout/game_over_fragment.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/fira_sans_bold"
         android:includeFontPadding="false"
-        android:text="Current high score:\n80019"
+        tools:text="Current high score:\n8089"
         android:textAlignment="center"
         android:textColor="?colorOnPrimary"
         android:textSize="32sp"
