--- a/app/src/main/res/layout/sidebar.xml
+++ b/app/src/main/res/layout/sidebar.xml
@@ -32,7 +32,7 @@
             android:backgroundTint="?colorPrimaryVariant"
             app:contentPadding="4dp"
             android:elevation="8dp">
-            <com.example.tetrisapp.model.game.view.PieceView
+            <com.example.tetrisapp.ui.view.PieceView
                 android:id="@+id/pvNext1"
                 app:backgroundColor="?colorPrimaryVariant"
                 android:layout_width="match_parent"
@@ -50,7 +50,7 @@
             android:elevation="8dp"
             app:contentPadding="4dp">
 
-            <com.example.tetrisapp.model.game.view.PieceView
+            <com.example.tetrisapp.ui.view.PieceView
                 android:id="@+id/pvNext2"
                 app:backgroundColor="?colorPrimaryVariant"
                 android:layout_width="match_parent"
@@ -67,7 +67,7 @@
             android:elevation="8dp"
             app:contentPadding="4dp">
 
-            <com.example.tetrisapp.model.game.view.PieceView
+            <com.example.tetrisapp.ui.view.PieceView
                 android:id="@+id/pvNext3"
                 app:backgroundColor="?colorPrimaryVariant"
                 android:layout_width="match_parent"
@@ -84,7 +84,7 @@
             android:elevation="8dp"
             app:contentPadding="4dp">
 
-            <com.example.tetrisapp.model.game.view.PieceView
+            <com.example.tetrisapp.ui.view.PieceView
                 android:id="@+id/pvNext4"
                 app:backgroundColor="?colorPrimaryVariant"
                 android:layout_width="match_parent"
@@ -112,7 +112,7 @@
             android:elevation="8dp"
             app:contentPadding="4dp">
 
-            <com.example.tetrisapp.model.game.view.PieceView
+            <com.example.tetrisapp.ui.view.PieceView
                 android:id="@+id/pvHold"
                 app:backgroundColor="?colorPrimaryVariant"
                 android:layout_width="match_parent"
