--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,6 +15,13 @@
             app:destination="@id/gameFragment"
             app:popUpTo="@id/gameFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_mainMenuFragment_to_scoresFragment"
+            app:destination="@id/scoresFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/gameFragment"
@@ -95,4 +102,8 @@
             app:argType="integer"
             android:defaultValue="0" />
     </fragment>
+    <fragment
+        android:id="@+id/scoresFragment"
+        android:name="com.example.tetrisapp.ui.fragment.ScoresFragment"
+        android:label="ScoresFragment" />
 </navigation>
