--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="grey">#D9D9D9</color>
+    <color name="red">#D41414</color>
     <color name="dark_grey">#C7C7C7</color>
 
     <color name="white_transparent">#99FFFFFF</color>
@@ -11,4 +12,8 @@
 
     <color name="transparent">#00000000</color>
     <color name="black_overlay">#BE000000</color>
+
+    <color name="gold">#FFF1C012</color>
+    <color name="silver">#FFBFBFBF</color>
+    <color name="bronze">#FFD7801B</color>
 </resources>
