--- a/app/src/main/res/layout/game_over_fragment.xml
+++ b/app/src/main/res/layout/game_over_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/fira_sans_bold"
         android:includeFontPadding="false"
-        android:text="Game over!"
+        android:text="@string/game_over"
         android:textColor="?colorOnPrimary"
         android:textSize="64sp"
         android:layout_marginTop="136dp"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/fira_sans_bold"
             android:layout_weight="1"
-            android:text="Score:"
+            android:text="@string/score"
             android:textColor="?colorOnPrimary"
             android:textSize="32sp" />
 
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/fira_sans_bold"
             android:layout_weight="1"
-            android:text="Lines:"
+            android:text="@string/lines"
             android:textColor="?colorOnPrimary"
             android:textSize="32sp" />
 
@@ -118,7 +118,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/fira_sans_bold"
             android:layout_weight="1"
-            android:text="Level:"
+            android:text="@string/level"
             android:textColor="?colorOnPrimary"
             android:textSize="32sp" />
 
