--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,9 @@
     <color name="black">#000000</color>
     <color name="grey">#D9D9D9</color>
     <color name="red">#D41414</color>
+    <color name="blue">#146AD4</color>
     <color name="dark_grey">#C7C7C7</color>
+    <color name="secondary_option">#6F6F6F</color>
 
     <color name="white_transparent">#99FFFFFF</color>
     <color name="black_transparent">#99000000</color>
