--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/fira_sans_bold</item>
         <item>@font/fira_sans_medium</item>
+        <item>@font/montserrat_medium</item>
     </array>
 </resources>
