--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -25,6 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/ivUser"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginVertical="12dp"
@@ -33,13 +34,13 @@
             android:contentDescription="@string/desc_profile"
             android:src="@drawable/ic_round_account_circle_24"
             app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
-            app:layout_constraintEnd_toStartOf="@+id/textView"
+            app:layout_constraintEnd_toStartOf="@+id/tvProfileName"
             app:layout_constraintStart_toStartOf="@+id/btnSignIn"
             app:layout_constraintTop_toTopOf="@+id/btnSignIn"
             app:tint="?colorOnPrimary" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvProfileName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/fira_sans_medium"
@@ -206,9 +207,9 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="194dp"
-                app:srcCompat="@drawable/ic_round_rotate_left_24"
+                tools:src="@tools:sample/avatars"
                 android:scaleType="centerCrop"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/desc_update_feature"
                 />
 
             <LinearLayout
@@ -253,12 +254,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
+                    android:textColor="?colorOnPrimary"
                     android:text="@string/update_feature_accept"
                     style="?attr/borderlessButtonStyle"
                     />
                 <com.google.android.material.button.MaterialButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="?colorOnPrimary"
                     android:text="@string/update_feature_decline"
                     style="?attr/borderlessButtonStyle"
                     />
