Added sign-in, sign-up and profile fragments

--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -36,8 +36,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
             app:layout_constraintEnd_toStartOf="@+id/tvProfileName"
             app:layout_constraintStart_toStartOf="@+id/btnSignIn"
-            app:layout_constraintTop_toTopOf="@+id/btnSignIn"
-            app:tint="?colorOnPrimary" />
+            app:layout_constraintTop_toTopOf="@+id/btnSignIn" />
 
         <TextView
             android:id="@+id/tvProfileName"
