Fixed dark theme

--- a/app/src/main/res/drawable/recyclerview_divider.xml
+++ b/app/src/main/res/drawable/recyclerview_divider.xml
@@ -3,5 +3,5 @@
     <size
         android:height="1dp"
         android:width="999dp"/>
-    <solid android:color="@color/grey"/>
+    <solid android:color="?colorSecondary"/>
 </shape>
