--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -2,25 +2,25 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false">
         <shape>
-            <solid android:color="@color/grey_transparent" />
+            <solid android:color="?colorPrimaryVariant" />
             <corners android:radius="20dp" />
         </shape>
     </item>
     <item android:state_enabled="true" android:state_pressed="true">
         <shape>
-            <solid android:color="@color/grey"/>
+            <solid android:color="?colorPrimaryVariant"/>
             <corners android:radius="20dp" />
         </shape>
     </item>
     <item android:state_enabled="true" android:state_focused="true">
         <shape>
-            <solid android:color="@color/grey"/>
+            <solid android:color="?colorPrimaryVariant"/>
             <corners android:radius="20dp" />
         </shape>
     </item>
     <item android:state_enabled="true">
         <shape>
-            <solid android:color="@color/white"/>
+            <solid android:color="?colorPrimary"/>
             <corners android:radius="20dp" />
         </shape>
     </item>
