--- a/app/src/main/res/drawable/background_game_value_large.xml
+++ b/app/src/main/res/drawable/background_game_value_large.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="20dp"/>
     <solid android:color="?colorPrimary" />
-    <stroke android:width="4dp" android:color="@color/grey"/>
+    <stroke android:width="4dp" android:color="?colorSecondary"/>
 </shape>
