--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -12,7 +12,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/background_button"
-        android:contentDescription="@string/desc_resume"
+        app:tint="?colorOnPrimary"
+        android:contentDescription="@string/desc_back"
         android:padding="8dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_back_24"
