--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,11 +10,12 @@
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:layout_marginTop="64dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/desc_profile"
         android:src="@drawable/ic_round_account_circle_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="?colorOnPrimary" />
 
     <TextView
         android:id="@+id/tvUsername"
@@ -22,12 +24,12 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/fira_sans_bold"
         android:includeFontPadding="false"
-        android:text="Nickname#2919"
         android:textColor="?colorOnPrimary"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />
+        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage"
+        tools:text="Nickname#2919" />
 
     <TextView
         android:id="@+id/tvEmailAddress"
@@ -35,28 +37,29 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/montserrat_medium"
-        android:text="nickname@gmail.com"
-        android:textColor="@color/secondary_option"
+        android:textColor="?android:attr/textColorSecondary"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
+        tools:text="nickname@gmail.com" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSignOut"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="0dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_button_darker"
-        android:backgroundTint="@color/red"
+        android:layout_marginBottom="48dp"
+        android:background="@drawable/background_button_secondary"
+        android:backgroundTint="?colorError"
         android:fontFamily="@font/fira_sans_bold"
         android:padding="8dp"
-        android:text="Sign Out"
+        android:text="@string/sign_out"
         android:textAllCaps="false"
-        android:textColor="?colorPrimary"
+        android:textColor="?colorOnError"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvEmailAddress" />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
