--- a/app/src/main/res/layout/fragment_scores.xml
+++ b/app/src/main/res/layout/fragment_scores.xml
@@ -17,7 +17,7 @@
         android:layout_marginHorizontal="12dp"
         android:elevation="0dp"
         app:cardCornerRadius="16dp"
-        app:strokeColor="@color/black"
+        app:strokeColor="?colorOnPrimary"
         app:strokeWidth="2dp">
 
         <TextView
@@ -27,15 +27,14 @@
             android:fontFamily="@font/fira_sans_bold"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:textColor="@color/black"
+            android:textColor="?colorOnPrimary"
             android:textSize="20sp"
             tools:text="1" />
     </com.google.android.material.card.MaterialCardView>
 
-    <View
+    <com.google.android.material.divider.MaterialDivider
         android:layout_width="2dp"
-        android:layout_height="48dp"
-        android:background="@drawable/vertical_divider" />
+        android:layout_height="48dp"/>
 
     <TextView
         android:id="@+id/tvDate"
@@ -46,14 +45,13 @@
         android:fontFamily="@font/fira_sans_bold"
         android:includeFontPadding="false"
         android:textAlignment="center"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textColor="?colorOnPrimary"
         android:textSize="22sp"
         tools:text="1:18\n18.12.2022" />
 
-    <View
+    <com.google.android.material.divider.MaterialDivider
         android:layout_width="2dp"
-        android:layout_height="48dp"
-        android:background="@drawable/vertical_divider" />
+        android:layout_height="48dp"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -65,7 +63,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_marginBottom="2dp">
 
             <TextView
@@ -75,7 +72,7 @@
                 android:fontFamily="@font/fira_sans_medium"
                 android:includeFontPadding="false"
                 android:text="@string/score"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="?colorOnPrimary"
                 android:textSize="18sp" />
 
             <TextView
@@ -86,7 +83,7 @@
                 android:fontFamily="@font/fira_sans_medium"
                 android:includeFontPadding="false"
                 android:textAlignment="viewEnd"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="?colorOnPrimary"
                 android:textSize="18sp"
                 tools:text="91999" />
         </LinearLayout>
@@ -103,7 +100,7 @@
                 android:fontFamily="@font/fira_sans_medium"
                 android:includeFontPadding="false"
                 android:text="@string/lines"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="?colorOnPrimary"
                 android:textSize="18sp" />
 
             <TextView
@@ -114,7 +111,7 @@
                 android:fontFamily="@font/fira_sans_medium"
                 android:includeFontPadding="false"
                 android:textAlignment="viewEnd"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="?colorOnPrimary"
                 android:textSize="18sp"
                 tools:text="91999" />
         </LinearLayout>
@@ -130,7 +127,7 @@
                 android:fontFamily="@font/fira_sans_medium"
                 android:includeFontPadding="false"
                 android:text="@string/level"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="?colorOnPrimary"
                 android:textSize="18sp" />
 
             <TextView
@@ -141,7 +138,7 @@
                 android:fontFamily="@font/fira_sans_medium"
                 android:includeFontPadding="false"
                 android:textAlignment="viewEnd"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="?colorOnPrimary"
                 android:textSize="18sp"
                 tools:text="9199999" />
         </LinearLayout>
