--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -19,6 +19,7 @@
 
         <EditText
             android:id="@+id/etEmail"
+            android:textColor="?colorOnPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:autofillHints="emailAddress"
@@ -29,6 +30,7 @@
 
         <EditText
             android:id="@+id/etPassword"
+            android:textColor="?colorOnPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -44,11 +46,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@drawable/background_button_darker"
+            android:background="@drawable/background_button_secondary"
             android:fontFamily="@font/montserrat_medium"
             android:text="@string/sign_in"
             android:textAllCaps="false"
-            android:textColor="?colorOnPrimary"
+            android:textColor="?colorOnSecondary"
             android:textSize="20sp" />
 
         <Button
@@ -59,7 +61,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/switch_to_sign_up"
             android:textAllCaps="false"
-            android:textColor="@color/secondary_option"
+            android:textColor="?android:attr/textColorSecondary"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -68,11 +70,11 @@
         style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/blue_700"
+        android:textColor="@color/white"
         android:padding="12dp"
         android:text="@string/sign_in_google"
         android:textAllCaps="false"
-        android:textColor="?colorPrimary"
         android:textSize="18sp"
         app:icon="@drawable/ic_google_24"
         app:iconPadding="12dp"
