--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -35,7 +35,8 @@
         android:layout_marginEnd="20dp"
         android:src="@drawable/ic_round_arrow_left_24"
         android:background="@drawable/background_button"
-        android:backgroundTint="?colorSecondaryVariant"
+        android:backgroundTint="@color/grey_transparent"
+        app:tint="?colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="@+id/btnDown"
         app:layout_constraintEnd_toStartOf="@+id/btnRight"
         app:layout_constraintTop_toTopOf="@+id/btnRotateRight"
@@ -50,7 +51,8 @@
         android:layout_marginEnd="32dp"
         android:src="@drawable/ic_round_arrow_right_24"
         android:background="@drawable/background_button"
-        android:backgroundTint="?colorSecondaryVariant"
+        android:backgroundTint="@color/grey_transparent"
+        app:tint="?colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="@+id/btnDown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnRotateRight"
@@ -65,7 +67,8 @@
         android:layout_marginBottom="32dp"
         android:src="@drawable/ic_round_arrow_drop_down_24"
         android:background="@drawable/background_button"
-        android:backgroundTint="?colorSecondaryVariant"
+        android:backgroundTint="@color/grey_transparent"
+        app:tint="?colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btnRotateRight"
         app:layout_constraintStart_toStartOf="@+id/btnRotateLeft"
@@ -81,7 +84,8 @@
         android:layout_marginBottom="12dp"
         android:src="@drawable/ic_round_rotate_right_24"
         android:background="@drawable/background_button"
-        android:backgroundTint="?colorSecondaryVariant"
+        android:backgroundTint="@color/grey_transparent"
+        app:tint="?colorOnPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnDown"
         app:layout_constraintStart_toEndOf="@+id/btnRotateLeft"
         android:contentDescription="@string/desc_rotate_right" />
@@ -96,7 +100,8 @@
         android:layout_marginBottom="12dp"
         android:src="@drawable/ic_round_rotate_left_24"
         android:background="@drawable/background_button"
-        android:backgroundTint="?colorSecondaryVariant"
+        android:backgroundTint="@color/grey_transparent"
+        app:tint="?colorOnPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnDown"
         app:layout_constraintStart_toStartOf="parent"
         android:contentDescription="@string/desc_rotate_left" />
@@ -110,6 +115,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/background_button"
+        app:tint="?colorOnPrimary"
         android:src="@drawable/ic_round_pause_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
