--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -33,11 +33,13 @@
             android:layout_marginStart="12dp"
             android:contentDescription="@string/desc_profile"
             android:src="@drawable/ic_round_account_circle_24"
+            app:tint="?colorOnSecondary"
             app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
             app:layout_constraintEnd_toStartOf="@+id/tvProfileName"
             app:layout_constraintStart_toStartOf="@+id/btnSignIn"
             app:layout_constraintTop_toTopOf="@+id/btnSignIn" />
 
+        <!-- TODO -->
         <TextView
             android:id="@+id/tvProfileName"
             android:layout_width="wrap_content"
@@ -46,7 +48,7 @@
             android:includeFontPadding="false"
             android:text="@string/sign_in_underlined"
             android:layout_marginEnd="12dp"
-            android:textColor="?colorOnPrimary"
+            android:textColor="?colorOnSecondary"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
             app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
@@ -58,12 +60,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:background="@drawable/background_button_darker"
+        android:background="@drawable/background_button_secondary"
         android:fontFamily="@font/fira_sans_bold"
         android:padding="8dp"
         android:text="@string/singleplayer"
         android:textAllCaps="false"
-        android:textColor="?colorOnPrimary"
+        android:textColor="?colorOnSecondary"
+        android:backgroundTint="?colorSecondary"
         android:textSize="20sp" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -71,12 +74,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:background="@drawable/background_button_darker"
+        android:background="@drawable/background_button_secondary"
         android:fontFamily="@font/fira_sans_bold"
         android:padding="8dp"
         android:text="@string/multiplayer"
         android:textAllCaps="false"
-        android:textColor="?colorOnPrimary"
+        android:textColor="?colorOnSecondary"
+        android:backgroundTint="?colorSecondary"
         android:textSize="20sp" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -84,12 +88,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:background="@drawable/background_button_darker"
+        android:background="@drawable/background_button_secondary"
         android:fontFamily="@font/fira_sans_bold"
         android:padding="8dp"
         android:text="@string/settings"
         android:textAllCaps="false"
-        android:textColor="?colorOnPrimary"
+        android:textColor="?colorOnSecondary"
+        android:backgroundTint="?colorSecondary"
         android:textSize="20sp" />
 
     <LinearLayout
@@ -104,38 +109,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/background_button_darker"
+            android:background="@drawable/background_button_secondary"
             android:contentDescription="@string/desc_exit"
             android:paddingHorizontal="8dp"
             android:paddingVertical="12dp"
             android:src="@drawable/ic_round_exit_to_app_24"
-            app:tint="?colorOnPrimary" />
+            app:tint="?colorOnSecondary" />
 
         <ImageButton
             android:id="@+id/btnLeaderboard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/background_button_darker"
+            android:background="@drawable/background_button_secondary"
             android:contentDescription="@string/desc_leaderboard"
             android:paddingHorizontal="8dp"
             android:paddingVertical="12dp"
             android:src="@drawable/ic_round_leaderboard_24"
-            app:tint="?colorOnPrimary"
-            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
+            app:tint="?colorOnSecondary" />
 
         <ImageButton
             android:id="@+id/btnSocials"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/background_button_darker"
+            android:background="@drawable/background_button_secondary"
             android:contentDescription="@string/desc_leaderboard"
             android:paddingHorizontal="8dp"
             android:paddingVertical="12dp"
-            android:src="@drawable/ic_round_leaderboard_24"
-            app:tint="?colorOnPrimary"
-            tools:ignore="ImageContrastCheck" />
+            android:src="@drawable/ic_github_24"
+            app:tint="?colorOnSecondary" />
     </LinearLayout>
 
     <TextView
@@ -194,6 +197,11 @@
         android:clickable="true"
         android:focusable="true"
         android:layout_margin="48dp"
+        app:cardBackgroundColor="?colorPrimary"
+        app:strokeColor="?colorPrimaryVariant"
+        app:cardCornerRadius="12dp"
+        android:elevation="8dp"
+        app:strokeWidth="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -223,6 +231,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/update_feature_title"
                     android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textColor="?colorOnPrimary"
                     />
                 <TextView
                     android:layout_width="wrap_content"
@@ -245,23 +254,25 @@
 
             <!-- Buttons -->
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:orientation="horizontal">
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnRationaleDecline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="?colorOnPrimary"
+                    android:text="@string/update_feature_decline"
+                    style="?attr/borderlessButtonStyle"
+                    />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnRationaleContinue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:textColor="?colorOnPrimary"
                     android:text="@string/update_feature_accept"
-                    style="?attr/borderlessButtonStyle"
-                    />
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?colorOnPrimary"
-                    android:text="@string/update_feature_decline"
                     style="?attr/borderlessButtonStyle"
                     />
             </LinearLayout>
