--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,18 +3,24 @@
     <style name="Theme.Tetris" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/dark_grey</item>
+        <item name="colorPrimaryVariant">@color/grey_900</item>
         <item name="colorOnPrimary">@color/white</item>
 
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white_transparent</item>
-        <item name="colorSecondaryVariant">@color/grey_transparent</item>
-        <item name="colorOnSecondary">@color/black_transparent</item>
+        <item name="colorSecondary">@color/grey_300</item>
+        <item name="colorSecondaryVariant">@color/grey_400</item>
+        <item name="colorOnSecondary">@color/black</item>
+
+        <item name="colorError">@color/red_700</item>
+        <item name="colorOnError">@color/white</item>
+
+        <!-- <item name="android:text">@color/dark_grey</item> -->
+        <item name="android:textColorSecondary">@color/grey_700</item>
+        <item name="android:colorBackground">?colorPrimary</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/transparent</item>
         <!-- Customize your theme here. -->
         <item name="android:alertDialogTheme">@style/LightDialogTheme</item>
-        <item name="alertDialogTheme">@style/LightDialogTheme</item>
     </style>
 
     <style name="Theme.Tetris.Fullscreen" parent="Theme.Tetris">
@@ -23,7 +29,7 @@
         <item name="android:windowBackground">@null</item>
     </style>
 
-    <style name="LightDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="DarkDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorPrimary">@color/black</item>
     </style>
 </resources>
