--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,18 +3,23 @@
     <style name="Theme.Tetris" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/grey</item>
+        <item name="colorPrimaryVariant">@color/grey_100</item>
         <item name="colorOnPrimary">@color/black</item>
 
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white_transparent</item>
-        <item name="colorSecondaryVariant">@color/grey_transparent</item>
-        <item name="colorOnSecondary">@color/black_transparent</item>
+        <item name="colorSecondary">@color/grey_300</item>
+        <item name="colorSecondaryVariant">@color/grey_400</item>
+        <item name="colorOnSecondary">@color/black</item>
+
+        <item name="colorError">@color/red_700</item>
+        <item name="colorOnError">@color/white</item>
+
+        <item name="android:textColorSecondary">@color/grey_700</item>
+        <item name="android:colorBackground">?colorPrimary</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/transparent</item>
         <!-- Customize your theme here. -->
         <item name="android:alertDialogTheme">@style/LightDialogTheme</item>
-        <item name="alertDialogTheme">@style/LightDialogTheme</item>
     </style>
 
     <style name="Theme.Tetris.Fullscreen" parent="Theme.Tetris">
