--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,13 +8,15 @@
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/grey_300</item>
-        <item name="colorSecondaryVariant">@color/grey_400</item>
+        <item name="colorSecondaryVariant">@color/grey_200</item>
         <item name="colorOnSecondary">@color/black</item>
 
         <item name="colorError">@color/red_700</item>
         <item name="colorOnError">@color/white</item>
 
-        <!-- <item name="android:text">@color/dark_grey</item> -->
+        <item name="colorGameButton">@color/grey_50_transparent</item>
+        <item name="colorOnGameButton">@color/black</item>
+
         <item name="android:textColorSecondary">@color/grey_700</item>
         <item name="android:colorBackground">?colorPrimary</item>
         <!-- Status bar color. -->
